--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -21,6 +21,7 @@
   margin: 0;
   padding: 0;
   font-family: var(--terminal-font);
+  cursor: url('../assets/curson.png') 0 0, auto;
 }
 
 body {
@@ -33,7 +34,6 @@ body {
   align-items: center;
   overflow-x: hidden;
 }
-
 .terminal-container {
   width: 800px;
   height: 500px;
